# ream

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  Dockerfile.cross  Makefile  README.md  STYLE.md
.github/workflows/: book-cli-check.yml  core-rust.yml  docker-ci.yml  riscv.yml
book/: SUMMARY.md  quickstart.md
book/cli/: SUMMARY.md  ream.md
book/cli/ream/: generate_validator_registry.md  lean_node.md
crates/common/api_types/beacon/: Cargo.toml
crates/common/chain/beacon/: Cargo.toml
crates/common/chain/lean/: Cargo.toml
crates/common/checkpoint_sync/: Cargo.toml
crates/common/checkpoint_sync/src/: lib.rs  weak_subjectivity.rs
crates/common/network_spec/: Cargo.toml
crates/crypto/bls/: Cargo.toml
crates/crypto/keystore/: Cargo.toml
crates/crypto/post_quantum/: Cargo.toml
crates/crypto/post_quantum/src/: lib.rs
crates/crypto/post_quantum/src/hashsig/: errors.rs  mod.rs  private_key.rs  public_key.rs  signature.rs
crates/crypto/post_quantum/src/leansig/: errors.rs  mod.rs  private_key.rs  public_key.rs  signature.rs
crates/networking/manager/: Cargo.toml
crates/networking/network_state/lean/: Cargo.toml
crates/networking/network_state/lean/src/: cached_peer.rs  lib.rs
crates/networking/p2p/: Cargo.toml
crates/networking/peer/: Cargo.toml
crates/networking/peer/src/: lib.rs
crates/rpc/beacon/: Cargo.toml
crates/rpc/lean/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: cache.rs
metrics/grafana/dashboards/: leanMetrics.json
testing/ef-tests/: Cargo.toml
testing/gossip-validation/tests/: validate_block.rs
testing/lean-spec-tests/: Cargo.toml  Makefile
testing/lean-spec-tests/src/: fork_choice.rs  lib.rs  state_transition.rs
testing/lean-spec-tests/tests/: tests.rs
(+140 files in other folders)
