[package]
name = "ream-peer"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ethereum_serde_utils.workspace = true
serde.workspace = true

[lints]
workspace = true
